Code review fixes.